--- a/sample/src/main/res/layout/testlayout.xml
+++ b/sample/src/main/res/layout/testlayout.xml
@@ -21,6 +21,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <SeekBar
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:progress="40"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -39,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-            >
+                >
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -51,7 +57,7 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:background="#2fa881"
-                    />
+                        />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -62,7 +68,7 @@
                         android:textColor="#FFCC00"
                         android:textSize="18sp"
                         android:textStyle="bold"
-                    />
+                        />
                 </RelativeLayout>
 
                 <LinearLayout
@@ -105,7 +111,7 @@
                             android:hint="密码"
                             android:inputType="textPassword"
                             android:textSize="16sp"
-                        />
+                            />
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
@@ -121,7 +127,7 @@
                         android:layout_width="150dp"
                         android:layout_height="50dp"
                         android:text="登录"
-                    >
+                        >
                     </Button>
                 </RelativeLayout>
 
@@ -133,7 +139,7 @@
                     android:text="忘记密码"
                     android:textColor="#9a9a9a"
                     android:textSize="12sp"
-                />
+                    />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -147,7 +153,7 @@
             android:layout_marginTop="25dp"
             android:transitionName="loginFab"
             app:fabSize="normal"
-        />
+            />
     </RelativeLayout>
 
 
